--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,6 +4,7 @@
     // File Layout
     "rootDir": "./src",
     "outDir": "./dist",
+    
 
     // Environment Settings
     // See also https://aka.ms/tsconfig/module
@@ -11,6 +12,7 @@
     "target": "esnext",
     "types": ["node"],
     "esModuleInterop": true, 
+    
     // For nodejs:
     // "lib": ["esnext"],
     // "types": ["node"],
@@ -41,5 +43,6 @@
     "noUncheckedSideEffectImports": true,
     "moduleDetection": "force",
     "skipLibCheck": true,
-  }
+  },
+  "include": ["src"]
 }
